# rect_detection

./: for_test.py  pyproject.toml  rectangle.py
